Corrections mineures de français

--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
             <article>
                 <div class="text">
                     <h3><mark>Autres bourses</mark></h3>
-                    <h4 class="largeText">Bourse du Conseil des commissaires : 2ème fois</h4>
+                    <h4 class="largeText">Bourse du Conseil des commissaires : 2e fois</h4>
                     <p>2019 - École Sainte-Anne</p>
-                    <h4 class="largeText">Bourse du Conseil des commissaires : 1ère fois</h4>
+                    <h4 class="largeText">Bourse du Conseil des commissaires : 1re fois</h4>
                     <p>2017 - École Eymard</p>
                 </div>
             </article>
