--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#sites">Site Web</a></li>
                 <li><a href="#graphisme">Graphisme</a></li>
                 <li><a href="#youtube">Chaîne YouTube</a></li>
-                <li><a href="#game-jam">Game Jam</a></li>
+                <li><a href="#game-jam">Game Jams</a></li>
                 <li><a href="#prix">Prix d'excellence</a></li>
                 <!-- <li><a href="#formation">Formation</a></li> -->
             </ul>
