Added Game Jam 2025
- still missing the video

--- a/index.html
+++ b/index.html
@@ -144,12 +144,29 @@
             <article>
                 <div class="text">
                     <h3><mark>Game Jam Sherbrooke 2025</mark></h3>
-                    <p><strong>À venir en mars...</strong></p>
+                    <h4>Thème</h4>
+                    <p>Réaction en chaîne</p>
+                    <h4>En bref</h4>
+                    <p>Avec la collaboration d'Antoine Caron, j'ai réalisé le jeu narratif et multi-niveaux <i>Oups!</i> en près de <strong>48 h</strong>.</p>
+                    <h4>Compétences</h4>
+                    <ul>
+                        <li>Développement avec <strong>Unity</strong> en <strong>C#</strong></li>
+                        <li>Dessin de style BD sur <strong>Photoshop</strong></li>
+                        <li><strong>Level design</strong></li>
+                    </ul>
+                    <h4>Essayer le jeu</h4>
+                    <p><a href="https://maxev.itch.io/oups">https://maxev.itch.io/oups</a></p>
+                    <br>
+                    <br>
+                    <h4>Vidéo à venir...</h4>
+                    <br>
                 </div>
             </article>
             <article>
                 <div class="text">
                     <h3><mark>Game Jam Sherbrooke 2024</mark></h3>
+                    <h4>Thème</h4>
+                    <p>Innocence</p>
                     <h4>En bref</h4>
                     <p>J'ai <strong>dirigé</strong> une équipe de trois participants nouvellement initiés à la
                         conception de
