Added GJS2025 video and enabled video looping

--- a/index.html
+++ b/index.html
@@ -158,8 +158,14 @@
                     <p><a href="https://maxev.itch.io/oups">https://maxev.itch.io/oups</a></p>
                     <br>
                     <br>
-                    <h4>Vidéo à venir...</h4>
-                    <br>
+                </div>
+                <div class="expandContainer">
+                    <div>
+                        <video autoplay muted controls loop class="rndCrn">
+                            <source src="media/oups_gameplay.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la vidéo.
+                        </video>
+                    </div>
                 </div>
             </article>
             <article>
@@ -183,7 +189,7 @@
                 </div>
                 <div class="expandContainer">
                     <div>
-                        <video autoplay muted controls class="rndCrn">
+                        <video autoplay muted controls loop class="rndCrn">
                             <source src="media/just_sleep_gameplay.mp4" type="video/mp4">
                             Votre navigateur ne supporte pas la vidéo.
                         </video>
